--- a/agenda.html
+++ b/agenda.html
@@ -69,7 +69,7 @@
         <a href="Home.html" class="hover:text-brand">Home</a>
         <a href="about.html" class="hover:text-brand">About</a>
         <a href="agenda.html" class="text-brand">Agenda</a>
-        <a href="events.html" class="hover:text-brand">Events</a>
+        <a href="event.html" class="hover:text-brand">Events</a>
         <a href="gallery.html" class="hover:text-brand">Gallery</a>
         <a href="contact.html" class="hover:text-brand">Contact</a>
         <a href="contact.html#join" class="ml-2 px-4 py-2 rounded-full bg-brand text-white shadow-glow hover:bg-brand-dark transition">Join Us</a>
@@ -80,8 +80,8 @@
     </div>
     <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg border-t border-gray-200">
       <nav class="px-6 py-4 flex flex-col space-y-4 font-medium">
-        <a href="index.html">Home</a><a href="about.html">About</a><a href="agenda.html" class="text-brand">Agenda</a>
-        <a href="events.html">Events</a><a href="gallery.html">Gallery</a><a href="contact.html">Contact</a>
+        <a href="Home.html">Home</a><a href="about.html">About</a><a href="agenda.html" class="text-brand">Agenda</a>
+        <a href="event.html">Events</a><a href="gallery.html">Gallery</a><a href="contact.html">Contact</a>
         <a href="contact.html#join" class="px-4 py-2 rounded-full bg-brand text-white text-center">Join Us</a>
       </nav>
     </div>
@@ -149,7 +149,7 @@
               <span class="badge">Welcoming</span>
             </div>
             <div class="mt-4 flex gap-3">
-              <a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">See next visit</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">See next visit</a>
               <a href="contact.html" class="px-4 py-2 rounded-lg border border-gray-200">Host a visit</a>
             </div>
           </div>
@@ -169,7 +169,7 @@
               <span class="badge">Safe space</span>
             </div>
             <div class="mt-4 flex gap-3">
-              <a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Next session</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Next session</a>
               <a href="contact.html" class="px-4 py-2 rounded-lg border border-gray-200">Partner with us</a>
             </div>
           </div>
@@ -189,7 +189,7 @@
               <span class="badge">Training</span>
             </div>
             <div class="mt-4 flex gap-3">
-              <a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Upcoming forum</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Upcoming forum</a>
               <a href="contact.html" class="px-4 py-2 rounded-lg border border-gray-200">Co-host</a>
             </div>
           </div>
@@ -209,7 +209,7 @@
               <span class="badge">Family-friendly</span>
             </div>
             <div class="mt-4 flex gap-3">
-              <a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Join Tree Day</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Join Tree Day</a>
               <a href="contact.html" class="px-4 py-2 rounded-lg border border-gray-200">Volunteer</a>
             </div>
           </div>
@@ -229,7 +229,7 @@
               <span class="badge">Family-friendly</span>
             </div>
             <div class="mt-4 flex gap-3">
-              <a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Get tickets</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Get tickets</a>
               <a href="contact.html" class="px-4 py-2 rounded-lg border border-gray-200">Sponsor</a>
             </div>
           </div>
@@ -250,7 +250,7 @@
             </div>
             <div class="mt-4 flex gap-3">
               <a href="contact.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Request a visit</a>
-              <a href="events.html" class="px-4 py-2 rounded-lg border border-gray-200">See examples</a>
+              <a href="event.html" class="px-4 py-2 rounded-lg border border-gray-200">See examples</a>
             </div>
           </div>
         </article>
@@ -274,7 +274,7 @@
             <div class="font-semibold text-darkblue">Interfaith Visit – Sikh Gurudwara, Tarneit</div>
             <div class="text-sm text-gray-600">Guided tour • Q&A • Langar (shared meal) <span class="tag tag-free ml-2">Free</span></div>
           </div>
-          <div class="cal-cta"><a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Reserve</a></div>
+          <div class="cal-cta"><a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Reserve</a></div>
         </div>
 
         <div class="card p-4 reveal cal-row">
@@ -283,7 +283,7 @@
             <div class="font-semibold text-darkblue">Wellbeing Night – Music & Mind</div>
             <div class="text-sm text-gray-600">Tea • Music • Tools for mental health <span class="tag tag-free ml-2">Free</span></div>
           </div>
-          <div class="cal-cta"><a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">RSVP</a></div>
+          <div class="cal-cta"><a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">RSVP</a></div>
         </div>
 
         <div class="card p-4 reveal cal-row">
@@ -292,7 +292,7 @@
             <div class="font-semibold text-darkblue">National Tree Day – Family Planting</div>
             <div class="text-sm text-gray-600">Hands-on • All ages • Eco care <span class="tag tag-free ml-2">Free</span></div>
           </div>
-          <div class="cal-cta"><a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Volunteer</a></div>
+          <div class="cal-cta"><a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Volunteer</a></div>
         </div>
 
         <div class="card p-4 reveal cal-row">
@@ -301,7 +301,7 @@
             <div class="font-semibold text-darkblue">Multifaith Dinner – Celebrate Together</div>
             <div class="text-sm text-gray-600">Speakers • Performances • Shared meal <span class="tag tag-paid ml-2">Ticketed</span></div>
           </div>
-          <div class="cal-cta"><a href="events.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Get Tickets</a></div>
+          <div class="cal-cta"><a href="event.html" class="px-4 py-2 rounded-lg bg-brand text-white hover:bg-brand-dark">Get Tickets</a></div>
         </div>
       </div>
     </div>
@@ -361,7 +361,7 @@
         <p class="mt-2 text-white/90">Join a visit, bring your family to Tree Day, or help host a celebration.</p>
       </div>
       <div class="reveal flex md:justify-end gap-3">
-        <a href="events.html" class="px-6 py-3 rounded-xl bg-white text-darkblue font-semibold shadow hover:scale-105 transition">See Events</a>
+        <a href="event.html" class="px-6 py-3 rounded-xl bg-white text-darkblue font-semibold shadow hover:scale-105 transition">See Events</a>
         <a href="contact.html#join" class="px-6 py-3 rounded-xl bg-white/15 ring-1 ring-white/30 text-white hover:bg-white/20">Become a member</a>
       </div>
     </div>
@@ -380,7 +380,7 @@
             <li><a href="Home.html" class="hover:text-white">Home</a></li>
           <li><a href="about.html" class="hover:text-white">About</a></li>
           <li><a href="agenda.html" class="text-white">Agenda</a></li>
-          <li><a href="events.html" class="hover:text-white">Events</a></li>
+          <li><a href="event.html" class="hover:text-white">Events</a></li>
           <li><a href="gallery.html" class="hover:text-white">Gallery</a></li>
           <li><a href="contact.html" class="hover:text-white">Contact</a></li>
         </ul>
