--- a/Home.html
+++ b/Home.html
@@ -104,7 +104,7 @@
     </div>
     <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg border-t border-gray-200">
       <nav class="px-6 py-4 flex flex-col space-y-4 font-medium">
-        <a href="index.html">Home</a><a href="about.html">About</a><a href="agenda.html">Agenda</a>
+        <a href="Home.html">Home</a><a href="about.html">About</a><a href="agenda.html">Agenda</a>
         <a href="event.html">Events</a><a href="gallery.html">Gallery</a><a href="contact.html">Contact</a>
         <a href="contact.html#join" class="px-4 py-2 rounded-full bg-brand text-white text-center">Join Us</a>
       </nav>
