--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
   <header class="fixed top-0 inset-x-0 z-40 bg-white/90 backdrop-blur border-b border-gray-100">
     <div class="max-w-7xl mx-auto px-6 h-16 flex items-center justify-between">
       <a href="index.html" class="flex items-center gap-3">
-        <img src="images/win-logo.png" alt="Wyndham Interfaith Network" class="h-12 w-auto" />
+        <img src="images/logo.jpg" alt="Wyndham Interfaith Network" class="h-12 w-auto" />
         <span class="font-semibold text-darkblue">Wyndham Interfaith Network</span>
       </a>
       <nav class="hidden md:flex items-center gap-6 font-medium">
